Add DbContext and Repositories for Auth

--- a/CollaborativeMusicApp/CollaborativeMusicApp/CollaborativeMusicApp.csproj
+++ b/CollaborativeMusicApp/CollaborativeMusicApp/CollaborativeMusicApp.csproj
@@ -13,4 +13,9 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CollaborativeMusicApp.Application\CollaborativeMusicApp.Application.csproj" />
+      <ProjectReference Include="..\CollaborativeMusicApp.Domain\CollaborativeMusicApp.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
