--- a/CollaborativeMusicApp/CollaborativeMusicApp.Infrastructure/CollaborativeMusicApp.Infrastructure.csproj
+++ b/CollaborativeMusicApp/CollaborativeMusicApp.Infrastructure/CollaborativeMusicApp.Infrastructure.csproj
@@ -6,4 +6,18 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CollaborativeMusicApp.Application\CollaborativeMusicApp.Application.csproj" />
+      <ProjectReference Include="..\CollaborativeMusicApp.Domain\CollaborativeMusicApp.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
