--- a/CollaborativeMusicApp/CollaborativeMusicApp.Application/CollaborativeMusicApp.Application.csproj
+++ b/CollaborativeMusicApp/CollaborativeMusicApp.Application/CollaborativeMusicApp.Application.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CollaborativeMusicApp.Domain\CollaborativeMusicApp.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="automapper" Version="12.0.1" />
+    </ItemGroup>
+
 </Project>
