--- a/CollaborativeMusicApp/CollaborativeMusicApp.Application/CollaborativeMusicApp.Application.csproj
+++ b/CollaborativeMusicApp/CollaborativeMusicApp.Application/CollaborativeMusicApp.Application.csproj
@@ -12,6 +12,13 @@
 
     <ItemGroup>
       <PackageReference Include="automapper" Version="12.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Identity.Core">
+        <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.0-preview.3.23177.8\Microsoft.Extensions.Identity.Core.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
