--- a/CollaborativeMusicApp/CollaborativeMusicApp/CollaborativeMusicApp.csproj
+++ b/CollaborativeMusicApp/CollaborativeMusicApp/CollaborativeMusicApp.csproj
@@ -16,6 +16,18 @@
     <ItemGroup>
       <ProjectReference Include="..\CollaborativeMusicApp.Application\CollaborativeMusicApp.Application.csproj" />
       <ProjectReference Include="..\CollaborativeMusicApp.Domain\CollaborativeMusicApp.Domain.csproj" />
+      <ProjectReference Include="..\CollaborativeMusicApp.Infrastructure\CollaborativeMusicApp.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="automapper" Version="12.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
+      <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
+      <PackageReference Include="Serilog" Version="3.0.1" />
+      <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.2" />
     </ItemGroup>
 
 </Project>
